--- a/_posts/2019-09-05-lanti-VRE.md
+++ b/_posts/2019-09-05-lanti-VRE.md
@@ -10,7 +10,7 @@ post_snippet: ... Kim et al. show that the administration of a bacterial communi
 Summarized from DalMUG group discussion and written by: Jacob Nearing
 
 ### Summary
-Infection by vancomycin-resistant enterococcus remains a large issue for patients undergoing treatment within hospitals. It is also known that the use of antibiotics by patients within the hospital can lead to the expansion of VRE within the intestines. As it has become more and more difficult to develop novel antibiotic strategies, researchers have turned to other avenues to fight VRE. In this report, Kim et al. show that the administration of a bacterial community consisting of *Clostridium bolteae*, *Blautia producta*, *Bacteroides sartorii* and *Parabacteroides distasonis* can lead to the depletion of VRE in VRE colonized mice. The authors go on to further show that the specific strain of Blautia producta used within their study BP~scsk~ is required for VRE depletion as another strain BP~control~  did not deplete VRE in mice. Finally, the authors were able to identify a lantibiotic encoded by BP~scsk~ that was responsible for VRE depletion.
+Infection by vancomycin-resistant enterococcus remains a large issue for patients undergoing treatment within hospitals. It is also known that the use of antibiotics by patients within the hospital can lead to the expansion of VRE within the intestines. As it has become more and more difficult to develop novel antibiotic strategies, researchers have turned to other avenues to fight VRE. In this report, Kim et al. show that the administration of a bacterial community consisting of *Clostridium bolteae*, *Blautia producta*, *Bacteroides sartorii* and *Parabacteroides distasonis* can lead to the depletion of VRE in VRE colonized mice. The authors go on to further show that the specific strain of Blautia producta used within their study BP(scsk) is required for VRE depletion as another strain BP(control)  did not deplete VRE in mice. Finally, the authors were able to identify a lantibiotic encoded by BP(scsk) that was responsible for VRE depletion.
 
 
 ### Points of Interest
